--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
